--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
+    "debug": "^2.2.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.12",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "sequelize": "^3.21.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.1",
+    "sequelize-cli": "^2.3.1"
   }
 }
