--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "body-parser": "^1.15.0",
     "debug": "^2.2.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
-    "sequelize": "^3.21.0"
+    "sequelize": "^3.21.0",
+    "pg": "^3.3.12",
+    "pg-hstore": "^2.1.17"
   },
   "devDependencies": {
     "nodemon": "^1.9.1",
