--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "body-parser": "^1.15.0",
     "debug": "^2.2.0",
     "express": "^4.13.4",
+    "jsonwebtoken": "^5.7.0",
     "morgan": "^1.7.0",
-    "sequelize": "^3.21.0",
     "pg": "^3.3.12",
-    "pg-hstore": "^2.1.17"
+    "pg-hstore": "^2.1.17",
+    "sequelize": "^3.21.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.1",
