--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development nodemon bin/www | bunyan",
+    "start": "NODE_ENV=production node bin/www",
+    "test": "NODE_ENV=test mocha -R spec  test/*.js"
   },
   "keywords": [],
   "author": "",
@@ -13,16 +14,19 @@
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
+    "bunyan": "^1.8.1",
+    "bunyan-format": "^0.2.1",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "jsonwebtoken": "^5.7.0",
-    "morgan": "^1.7.0",
     "pg": "^3.3.12",
     "pg-hstore": "^2.1.17",
     "sequelize": "^3.21.0"
   },
   "devDependencies": {
+    "mocha": "^2.4.5",
     "nodemon": "^1.9.1",
-    "sequelize-cli": "^2.3.1"
+    "sequelize-cli": "^2.3.1",
+    "supertest": "^1.2.0"
   }
 }
