--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^0.8.5",
+    "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
     "custom-error-generator": "^7.0.0",
+    "expect": "^1.20.1",
     "express": "^4.13.4",
+    "factory-girl": "^3.1.0",
+    "factory-girl-sequelize": "^1.0.0",
+    "faker": "^3.1.0",
     "jsonwebtoken": "^5.7.0",
     "morgan": "^1.7.0",
     "pg": "^4.5.5",
