moved to es6 function format, improved logging, started improving tests

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "david",
+    "username": null,
     "password": null,
     "database": "database_development",
     "host": "localhost",
@@ -8,7 +8,7 @@
     "dialect": "postgres"
   },
   "test": {
-    "username": "david",
+    "username": null,
     "password": null,
     "database": "database_test",
     "host": "localhost",
