--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.21.0",
+    "sinon": "^1.17.4",
+    "sqlite3": "^3.1.3",
     "winston": "^2.2.0"
   },
   "devDependencies": {
