--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon bin/www",
-    "start": "NODE_ENV=production DATABASE_URL=postgres://david:null@localhost/database_development node bin/www",
-    "test": "NODE_ENV=test mocha -R spec  test/*.js"
+    "start": "NODE_ENV=production DATABASE_URL=postgres://null:null@localhost/database_development node bin/www",
+    "test": "NODE_ENV=test mocha -R spec  test/*.js",
+    "db:migrate": "sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
@@ -23,11 +24,12 @@
     "faker": "^3.1.0",
     "jsonwebtoken": "^5.7.0",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.0.0",
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.21.0",
+    "sequelize": "^3.23.2",
     "sinon": "^1.17.4",
-    "sqlite3": "^3.1.3",
     "winston": "^2.2.0"
   },
   "devDependencies": {
